--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="lobbyEventSummary">
-<div style="font-size:1.6em;color:gray;padding-bottom:10px;">Nadchodzące ogłoszenia:</div>
+<div class="title-header"> Nadchodzące wydarzenia:</div>
 	<div data-bind="foreach: publicEvents">
 		<div class="lobby-event-rectangle">
 			<div data-bind="style: { color: kind.headerColor, background: 'rgb(130,130,130)', border: '1px solid rgb(221, 221, 221)', padding: '10px', marginBottom: '10px' }">
