--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -1,9 +1,5 @@
 ﻿<div id="detailsPageAllEventsListContainer" style="display: none;">
-	<div style="margin-bottom: 4px; padding: 5px; color: rgb(194, 255, 207); /* color: rgb(153, 211, 165); */
-/* border-top: 1px solid rgb(187, 187, 187); */
-/* border-left: 1px solid white; */
-border-bottom: 1px solid rgb(255, 255, 255); /* border-right: 1px solid rgb(214,214,214); */
-background: rgba(0, 0, 0, 0.34);">
+	<div style="margin-bottom: 16px; padding: 5px; color: rgb(153, 211, 165);border-bottom: 1px solid rgb(255, 255, 255);font-size:1.4em;">
 		Mój kalendarz:
 	</div>
 	<div data-bind="foreach: $root.detailsPageAllSelectedEvents" style="position: relative; left: 1px;">
