added favicon.ico icon

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -14,7 +14,7 @@
 				@Html.Partial("_Login", new KalendarzKarieryData.Models.AccountModels.LoginModel())
 				@Html.Partial("_Register", new KalendarzKarieryData.Models.ViewModels.RegisterViewModel())
 
-				  <div style="font-size:2em; color:rgb(194, 186, 169);width:80%;margin:40px auto;text-align:center;font-family:CodePro;">
+				  <div style="font-size:2em; color:rgb(194, 186, 169);width:80%;margin:40px auto;text-align:center;">
 	Twój osobisty kalendarz stworzony na miare Twoich potrzeb.
 	</div>
    }
