--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Kalendarz Kariery</title>
 	@*<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>*@
+	<link rel="icon" href="@Url.Content("~/Images/Ico/favicon.ico")"/>
 
 	@Styles.Render("~/Content/css")
 	@Scripts.Render("~/bundles/jquery")
