--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
 	@Scripts.Render("~/bundles/knockout")
 
 	<script src="~/Scripts/Lib/raphael-min.js"></script>
+	<script src="~/Scripts/Lib/SpinJS/spin.min.js"></script>
 	<script src="~/Scripts/KnockoutCustomBindings/KOCustomBindings.js"></script>
 	<script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
 	<script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
@@ -24,12 +25,14 @@
 	<script src="~/Scripts/Helpers/EventColorHelper.js"></script>
 	<script src="~/Scripts/Helpers/EventTreeBuilder.js"></script>
 
+
 </head>
 <body>
 	<header>
 	</header>
 
 	<section id="mainContainer">
+	<div id="spinnerContainer"><span style="position:absolute;bottom:20px;left:40px;z-index:10001;color:white;font-size:2em;">Wczytywanie...</span></div>
 
 		@RenderBody()
 
