--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -29,7 +29,7 @@
 	 }
 				</div>
 				
-				   <div style="font-size:2em; color:rgb(194, 186, 169);margin:40px auto;width:80%;text-align:center;font-family:CodePro;">
+				   <div style="font-size:2em; color:rgb(194, 186, 169);margin:40px auto;width:80%;text-align:center;">
 	Twój osobisty kalendarz stworzony na miare Twoich potrzeb.
 	</div>
 
