--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -319,7 +319,7 @@
 								"background" : "rgb(248,248,248)"
 							});
 						}
-					}, '.lobby-event-rectangle');
+					}, '.event-block');
 
 					$mainContainer.on({
 						mouseenter: function () {
